fix accessibility contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,6 @@
 
 @layer components {
 	.link {
-		@apply outline-none transition-colors duration-300 ease-out hover:text-pine focus:text-pine;
+		@apply outline-none transition-colors duration-300 ease-out hover:text-gold focus:text-gold;
 	}
 }
